WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80352
WorkerContext shouldn't need to know about SQLDatabase
https://bugs.webkit.org/show_bug.cgi?id=80352
Summary
WorkerContext shouldn't need to know about SQLDatabase
Adam Barth
Reported
2012-03-05 16:56:08 PST
WorkerContext shouldn't need to know about SQLDatabase
Attachments
Patch
(24.01 KB, patch)
2012-03-05 16:59 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-03-05 16:59:02 PST
Created
attachment 130235
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-03-05 17:03:03 PST
Comment on
attachment 130235
[details]
Patch OK.
Kentaro Hara
Comment 3
2012-03-05 17:04:34 PST
***
Bug 79473
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 4
2012-03-05 18:30:46 PST
Comment on
attachment 130235
[details]
Patch Clearing flags on attachment: 130235 Committed
r109833
: <
http://trac.webkit.org/changeset/109833
>
WebKit Review Bot
Comment 5
2012-03-05 18:30:52 PST
All reviewed patches have been landed. Closing bug.
Philippe Normand
Comment 6
2012-03-05 23:39:18 PST
This change caused the fast/workers/storage tests to fail on GTK (at least). Some tests show this message on the console: Can't find variable: openDatabaseSync
Adam Barth
Comment 7
2012-03-05 23:42:26 PST
I think I fixed that already in
http://trac.webkit.org/changeset/109861
. Are they still failing?
Philippe Normand
Comment 8
2012-03-05 23:47:19 PST
(In reply to
comment #7
)
> I think I fixed that already in
http://trac.webkit.org/changeset/109861
. Are they still failing?
Yes,
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release?numbuilds=50
Since
r109833
.
Philippe Normand
Comment 9
2012-03-06 00:03:27 PST
(In reply to
comment #8
)
> (In reply to
comment #7
) > > I think I fixed that already in
http://trac.webkit.org/changeset/109861
. Are they still failing? > > Yes,
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release?numbuilds=50
> Since
r109833
.
A clean build is the solution. False alarm and sorry for the noise Adam!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug