WorkerContext shouldn't need to know about SQLDatabase https://bugs.webkit.org/show_bug.cgi?id=80352

Reviewed by Eric Seidel.

This patch removes the SQLDatabase functions from WorkerContext in
preparation for moving the SQLDatabase code into a module.  These
functions don't interact with the rest of WorkerContext.

* CMakeLists.txt:
* DerivedSources.make:
* DerivedSources.pri:
* GNUmakefile.list.am:
* Target.pri:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* storage/DOMWindowSQLDatabase.cpp:
* storage/WorkerContextSQLDatabase.cpp: Added.
(WebCore):
(WebCore::WorkerContextSQLDatabase::openDatabase):
(WebCore::WorkerContextSQLDatabase::openDatabaseSync):
* storage/WorkerContextSQLDatabase.h: Added.
(WebCore):
(WorkerContextSQLDatabase):
(WebCore::WorkerContextSQLDatabase::WorkerContextSQLDatabase):
(WebCore::WorkerContextSQLDatabase::~WorkerContextSQLDatabase):
* storage/WorkerContextSQLDatabase.idl: Added.
* workers/WorkerContext.cpp:
(WebCore):
* workers/WorkerContext.h:
(WebCore):
(WorkerContext):
* workers/WorkerContext.idl:


Canonical link: https://commits.webkit.org/97481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109833 268f45cc-cd09-0410-ab3c-d52691b4dbfc