Source/WebCore/storage/WorkerContextSQLDatabase.cpp
@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2006, 2007, 2008, 2010 Apple Inc. All rights reserved.
- * Copyright (C) 2010 Nokia Corporation and/or its subsidiary(-ies)
+ * Copyright (C) 2008 Apple Inc. All Rights Reserved.
+ * Copyright (C) 2009, 2011 Google Inc. All Rights Reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -22,37 +22,43 @@
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ *
  */
 
 #include "config.h"
 
 #if ENABLE(SQL_DATABASE)
 
-#include "DOMWindowSQLDatabase.h"
+#include "WorkerContextSQLDatabase.h"
 
 #include "AbstractDatabase.h"
-#include "DOMWindow.h"
 #include "Database.h"
 #include "DatabaseCallback.h"
-#include "Document.h"
-#include "Frame.h"
+#include "DatabaseSync.h"
+#include "DatabaseTracker.h"
 #include "SecurityOrigin.h"
+#include "WorkerContext.h"
 
 namespace WebCore {
 
-PassRefPtr<Database> DOMWindowSQLDatabase::openDatabase(DOMWindow* window, const String& name, const String& version, const String& displayName, unsigned long estimatedSize, PassRefPtr<DatabaseCallback> creationCallback, ExceptionCode& ec)
+PassRefPtr<Database> WorkerContextSQLDatabase::openDatabase(WorkerContext* context, const String& name, const String& version, const String& displayName, unsigned long estimatedSize, PassRefPtr<DatabaseCallback> creationCallback, ExceptionCode& ec)
 {
-    if (!window->isCurrentlyDisplayedInFrame())
-        return 0;
-
-    RefPtr<Database> database = 0;
-    if (AbstractDatabase::isAvailable() && window->document()->securityOrigin()->canAccessDatabase())
-        database = Database::openDatabase(window->document(), name, version, displayName, estimatedSize, creationCallback, ec);
-
-    if (!database && !ec)
+    if (!context->securityOrigin()->canAccessDatabase() || !AbstractDatabase::isAvailable()) {
         ec = SECURITY_ERR;
+        return 0;
+    }
 
-    return database;
+    return Database::openDatabase(context, name, version, displayName, estimatedSize, creationCallback, ec);
+}
+
+PassRefPtr<DatabaseSync> WorkerContextSQLDatabase::openDatabaseSync(WorkerContext* context, const String& name, const String& version, const String& displayName, unsigned long estimatedSize, PassRefPtr<DatabaseCallback> creationCallback, ExceptionCode& ec)
+{
+    if (!context->securityOrigin()->canAccessDatabase() || !AbstractDatabase::isAvailable()) {
+        ec = SECURITY_ERR;
+        return 0;
+    }
+
+    return DatabaseSync::openDatabaseSync(context, name, version, displayName, estimatedSize, creationCallback, ec);
 }
 
 } // namespace WebCore
