Source/WebCore/workers/WorkerContext.h
@@ -48,9 +48,6 @@ namespace WebCore {
 
     class Blob;
     class DOMURL;
-    class Database;
-    class DatabaseCallback;
-    class DatabaseSync;
     class NotificationCenter;
     class ScheduledAction;
     class WorkerInspectorController;
@@ -112,11 +109,6 @@ namespace WebCore {
         NotificationCenter* webkitNotifications() const;
 #endif
 
-#if ENABLE(SQL_DATABASE)
-        // HTML 5 client-side database
-        PassRefPtr<Database> openDatabase(const String& name, const String& version, const String& displayName, unsigned long estimatedSize, PassRefPtr<DatabaseCallback> creationCallback, ExceptionCode&);
-        PassRefPtr<DatabaseSync> openDatabaseSync(const String& name, const String& version, const String& displayName, unsigned long estimatedSize, PassRefPtr<DatabaseCallback> creationCallback, ExceptionCode&);
-#endif
         virtual bool isContextThread() const;
         virtual bool isJSExecutionForbidden() const;
 
